--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,13 @@
 
     <TextView
         android:id="@+id/result"
-        android:layout_width="match_parent"
+        android:layout_width="377dp"
         android:layout_height="wrap_content"
         android:layout_above="@id/buttons_layout"
-        android:layout_margin="16dp"
+        android:layout_marginStart="196dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="0"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
@@ -270,4 +273,12 @@
                 android:layout_margin="12dp"/>
         </LinearLayout>
     </LinearLayout>
+    <Button
+        android:id="@+id/switchbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Switch"
+        android:layout_below="@id/result"
+        android:layout_marginTop="-90dp"
+        android:layout_marginStart="20dp"/>
 </RelativeLayout>
