--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,16 +1,405 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+    android:orientation="vertical"
+    android:weightSum="10"
+    tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="SCIENTIFIC CALCULATOR"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"/>
+        android:id="@+id/tvsec"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/black"
+        android:text=""
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textAlignment="viewEnd"
+        android:paddingTop="30dp"
+        android:padding="10dp"
+        android:maxLines="1" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/tvmain"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:background="#000"
+        android:text="0"
+        android:textAlignment="viewEnd"
+        android:textColor="#fff"
+        android:padding="30dp"
+        android:textSize="50sp"
+        android:maxLines="1" />
+
+    <LinearLayout
+        android:layout_weight="7"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="0dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="7">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:weightSum="4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:id="@+id/bac"
+                        android:text="AC"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bc"
+                        android:text="C"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bbarc1"
+                        android:text="("
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bbarc2"
+                        android:text=")"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:weightSum="5"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:id="@+id/sin"
+                        android:text="sin"
+                        android:textSize="25sp"
+                        android:textAllCaps="false"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bcos"
+                        android:text="cos"
+                        android:textAllCaps="false"
+                        android:textSize="25sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/btan"
+                        android:text="tan"
+                        android:textAllCaps="false"
+                        android:textSize="25sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/blog"
+                        android:text="log"
+                        android:textAllCaps="false"
+                        android:textSize="25sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bln"
+                        android:text="ln"
+                        android:textSize="25sp"
+                        android:textAllCaps="false"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:weightSum="5"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:id="@+id/bfact"
+                        android:text="X!"
+                        android:textSize="30sp"
+                        android:textAllCaps="false"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bsqua"
+                        android:text="x²"
+                        android:textAllCaps="false"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bsqrt"
+                        android:text="√"
+                        android:textSize="30sp"
+                        android:textAllCaps="false"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/binv"
+                        android:text="1/x"
+                        android:textAllCaps="false"
+                        android:textSize="20sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bdiv"
+                        android:text="÷"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:weightSum="4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:id="@+id/b7"
+                        android:text="7"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/b8"
+                        android:text="8"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/b9"
+                        android:text="9"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bmod"
+                        android:text="×"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:weightSum="4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:id="@+id/b4"
+                        android:text="@string/_4"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/b5"
+                        android:text="@string/_5"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/b6"
+                        android:text="@string/_6"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bminus"
+                        android:text="-"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:weightSum="4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:id="@+id/b1"
+                        android:text="1"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/b2"
+                        android:text="2"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/b3"
+                        android:text="3"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bplus"
+                        android:text="+"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:weightSum="4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <Button
+                        android:id="@+id/bpi"
+                        android:text="π"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/b0"
+                        android:text="0"
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bdot"
+                        android:text="."
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/bequal"
+                        android:text="="
+                        android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
+
+
+
+
+
+
+
+
