--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -14,29 +14,29 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/black"
-        android:text=""
+        android:text="@string/_0"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textAlignment="viewEnd"
-        android:paddingTop="30dp"
+        android:paddingTop="10dp"
         android:padding="10dp"
         android:maxLines="1" />
 
     <TextView
         android:id="@+id/tvmain"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="5dp"
+        android:layout_weight="1"
         android:background="#000"
-        android:text="0"
+        android:text=""
         android:textAlignment="viewEnd"
         android:textColor="#fff"
-        android:padding="30dp"
-        android:textSize="50sp"
+        android:padding="10dp"
+        android:textSize="40sp"
         android:maxLines="1" />
 
     <LinearLayout
-        android:layout_weight="7"
+        android:layout_weight="8"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="0dp">
@@ -58,7 +58,7 @@
 
                     <Button
                         android:id="@+id/bac"
-                        android:text="AC"
+                        android:text="@string/ac"
                         android:textSize="30sp"
                         android:background="#000"
                         android:layout_weight="1"
@@ -353,7 +353,7 @@
                 android:orientation="horizontal">
                 <LinearLayout
                     android:orientation="horizontal"
-                    android:weightSum="4"
+                    android:weightSum="5"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
@@ -385,6 +385,14 @@
                         android:id="@+id/bequal"
                         android:text="="
                         android:textSize="30sp"
+                        android:background="#000"
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <Button
+                        android:id="@+id/alterr"
+                        android:text="switch"
+                        android:textSize="11sp"
                         android:background="#000"
                         android:layout_weight="1"
                         android:layout_width="match_parent"
